Added clientes pages

--- a/Client/Pages/Segmentos/ExibirSegmentos.razor
+++ b/Client/Pages/Segmentos/ExibirSegmentos.razor
@@ -12,7 +12,7 @@
         </li>
     }
 </ul>
-<ModalDelete @ref="modal" Id="@deleteid"></ModalDelete>
+<ModalDelete @ref="modal" Id="@deleteid" type="segmento"></ModalDelete>
 <button class="btn btn-primary" @onclick="() => modal.Open()">Modal!</button>
 
 @code {
