--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -15,7 +15,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="cliente">
+            <NavLink class="nav-link" href="/Clientes">
                 <span class="oi oi-plus" aria-hidden="true"></span> Clientes/Empresas
             </NavLink>
         </div>
