--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -9,6 +9,7 @@
 @using Client
 @using Client.Shared
 @using Client.Services
-@using Client.Pages.Segmentos;
+@using Client.Pages.Segmentos
+@using Client.Pages.Clientes
 @using DTO
 
