--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -23,7 +23,7 @@ else
     <div class="row d-flex flex-row">
         <h5 class="w-25 ">Nome</h5>
         <h5 class="w-50 ">Descrição</h5>
-        <h5 class="w-25 text-end">Ações</h5>
+        <h5 class="w-25 text-center pe-1">Ações</h5>
     </div>
     @if (Segmentosenviados.Count() > 0)
     {
