--- a/Client/Pages/Segmentos/Segmento.razor
+++ b/Client/Pages/Segmentos/Segmento.razor
@@ -9,8 +9,16 @@ else if (MensagemErro is not null)
 }
 else
 {
+    <h1 class="m-5">Segmento</h1>
+    <div class="border m-3">
+    <h3>Nome</h3>
     <h5>@segmento.Nome</h5>
+</div>
+    <div class="border m-3">
+    <h3>Descrição</h3>
     <h5>@segmento.Descricao</h5>
+</div>
+
 }
 
 @code {
