--- a/Client/Pages/Clientes/Cliente.razor
+++ b/Client/Pages/Clientes/Cliente.razor
@@ -9,14 +9,15 @@ else if (MensagemErro is not null)
 }
 else
 {
-    <div>
+    <h1 class="m5">Cliente</h1>
+    <div class="border m-3">
     <h3>Nome</h3>
     <h5>@cliente.Nome</h5>
 </div>
-    <div>
+    <div class="border m-3">
     <h3>site</h3>
     <h5>@cliente.Site</h5>
-</div>
+</div class="border m-3">
     <div>
     <h3>segmento</h3>
     <h5>@segmento.Nome</h5>
