--- a/Client/Pages/Clientes/ExibirClientes.razor
+++ b/Client/Pages/Clientes/ExibirClientes.razor
@@ -6,10 +6,10 @@
                 <h5 class=""> @item.Nome</h5>
 
             </div>
-            <div>
-                <h5 class="">@item.Site</h5>
+            <div class="w-50">
+                <h5>@item.Site</h5>
             </div>
-            <div>
+            <div class="w-25 d-flex flex-row justify-content-evenly">
                 <a href="/Cliente/@item.Id"><i class="fa-regular fa-eye"></i></a>
                 <a href="/AtualizarCliente/@item.Id"><i class="fa-solid fa-pencil"></i></a>
                 <a href="" @onclick="() => OpenModal(item.Id)" @onclick:preventDefault><i class="fa-solid fa-trash"></i></a>
@@ -18,7 +18,7 @@
     }
 </ul>
 <ModalDelete @ref="modal" Id="@deleteid" type="cliente"></ModalDelete>
-<button class="btn btn-primary" @onclick="() => modal.Open()">Modal!</button>
+
 
 @code {
     [Parameter]
